# serializer version: 1
# name: test_sensor_slr1_boost_snapshot
  dict({
    'sensor.hive_thermostat_current_temperature': dict({
      'attributes': dict({
        'device_class': 'temperature',
        'friendly_name': 'Hive Thermostat Current temperature',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'state': '18.5',
    }),
    'sensor.hive_thermostat_heating_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat Heating boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '30',
    }),
    'sensor.hive_thermostat_running_state_heat': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat Running state heat',
      }),
      'state': 'heat',
    }),
  })
# ---
# name: test_sensor_slr1_snapshot
  dict({
    'sensor.hive_thermostat_current_temperature': dict({
      'attributes': dict({
        'device_class': 'temperature',
        'friendly_name': 'Hive Thermostat Current temperature',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'state': '20.5',
    }),
    'sensor.hive_thermostat_heating_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat Heating boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '0',
    }),
    'sensor.hive_thermostat_running_state_heat': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat Running state heat',
      }),
      'state': 'heat',
    }),
  })
# ---
# name: test_sensor_slr2_boost_snapshot
  dict({
    'sensor.hive_thermostat_slr2_current_temperature': dict({
      'attributes': dict({
        'device_class': 'temperature',
        'friendly_name': 'Hive Thermostat SLR2 Current temperature',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'state': '18.5',
    }),
    'sensor.hive_thermostat_slr2_heating_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Heating boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '30',
    }),
    'sensor.hive_thermostat_slr2_running_state_heat': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Running state heat',
      }),
      'state': 'heat',
    }),
    'sensor.hive_thermostat_slr2_running_state_water': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Running state water',
      }),
      'state': 'idle',
    }),
    'sensor.hive_thermostat_slr2_water_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Water boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '0',
    }),
  })
# ---
# name: test_sensor_slr2_snapshot
  dict({
    'sensor.hive_thermostat_slr2_current_temperature': dict({
      'attributes': dict({
        'device_class': 'temperature',
        'friendly_name': 'Hive Thermostat SLR2 Current temperature',
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'state': '20.5',
    }),
    'sensor.hive_thermostat_slr2_heating_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Heating boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '0',
    }),
    'sensor.hive_thermostat_slr2_running_state_heat': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Running state heat',
      }),
      'state': 'heat',
    }),
    'sensor.hive_thermostat_slr2_running_state_water': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Running state water',
      }),
      'state': 'idle',
    }),
    'sensor.hive_thermostat_slr2_water_boost_remaining': dict({
      'attributes': dict({
        'friendly_name': 'Hive Thermostat SLR2 Water boost remaining',
        'unit_of_measurement': 'minutes',
      }),
      'state': '0',
    }),
  })
# ---
